--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 BigNumber = w3.BigNumber;
             }
             userAddress = (await web3.eth.getAccounts())[0];
+            let network = await web3.eth.net.getNetworkType();
             if (amount == null || tokenAddress == null || !isValidAddress(tokenAddress)
                 || discordId == null || !isUint64(discordId)
                 || decimal == null || !isUint64(decimal) || symbol == null)
@@ -95,6 +96,12 @@
                 document.getElementById("start-button").disabled = true;
                 document.getElementById("start-button1").disabled = true;
                 alert("No valid token address");
+            }
+            else if (network !== 'rinkeby')
+            {
+                document.getElementById("start-button").disabled = true;
+                document.getElementById("start-button1").disabled = true;
+                alert("Switch to Rinkey testnet please");
             }
             else
             {
