--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     document.getElementById("start-button").classList.add("button_valid");
                     document.getElementById("start-button").innerText = "You have unlocked the token! Proceed to step 2";
                     document.getElementById("start-button").disabled = true;
-                    document.getElementById("start-butto1n").disabled = false;
+                    document.getElementById("start-button1").disabled = false;
 
                 }
                 document.getElementById("start-button1").innerText = "Deposit " + convertUintToReadable(amount, decimal) + " " + symbol;
